Fix deprecation warnings in NetClient by using URI.toURL() instead of new URL()
Signed-off-by: dedetive <ded31459@hotmail.com>